Implement plugin system v3 contract
